Adding Google Analytics to lightskeleton.com

--- a/node/4.html
+++ b/node/4.html
@@ -67,6 +67,7 @@
 </style>
 <style type="text/css" media="all">
 @import url("/sites/all/modules/ctools/css/ctools.css?");
+@import url("/sites/all/libraries/fontawesome/css/font-awesome.css?");
 @import url("/sites/all/modules/webform/css/webform.css?");
 @import url("/sites/all/themes/light_skeleton/css/light_skeleton_skeleton.css?");
 @import url("/sites/all/themes/light_skeleton/css/light_skeleton_responsive_nav.css?");
@@ -76,19 +77,25 @@
     <!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-  <script type="text/javascript" src="/sites/all/modules/jquery_update/replace/jquery/1.10/jquery.min.js?v=1.10.2"></script>
+  <script type="text/javascript" src="/sites/all/modules/jquery_update/replace/jquery/1.7/jquery.min.js?v=1.7.2"></script>
 <script type="text/javascript" src="/misc/jquery.once.js?v=1.2"></script>
 <script type="text/javascript" src="/misc/drupal.js?"></script>
 <script type="text/javascript" src="/sites/all/modules/jquery_update/replace/ui/ui/minified/jquery.ui.core.min.js?v=1.10.2"></script>
 <script type="text/javascript" src="/sites/all/modules/jquery_update/replace/ui/ui/minified/jquery.ui.datepicker.min.js?v=1.10.2"></script>
 <script type="text/javascript" src="/misc/form.js?v=7.39"></script>
+<script type="text/javascript" src="/sites/all/modules/google_analytics/googleanalytics.js?"></script>
+<script type="text/javascript">
+<!--//--><![CDATA[//><!--
+(function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,"script","//www.google-analytics.com/analytics.js","ga");ga("create", "UA-68209755-1", {"cookieDomain":"auto"});ga("set", "anonymizeIp", true);ga("send", "pageview");
+//--><!]]>
+</script>
 <script type="text/javascript" src="/misc/textarea.js?v=7.39"></script>
 <script type="text/javascript" src="/misc/tableheader.js?"></script>
 <script type="text/javascript" src="/sites/all/modules/webform/js/webform.js?"></script>
 <script type="text/javascript" src="/sites/all/themes/light_skeleton/js/light_skeleton_menu.js?"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"light_skeleton","theme_token":"xQ8HOFqpVEzS9F1KCj2PA18J5htU1AXF8lO0k3ILAUQ","js":{"sites\/all\/modules\/jquery_update\/replace\/jquery\/1.10\/jquery.min.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"sites\/all\/modules\/jquery_update\/replace\/ui\/ui\/minified\/jquery.ui.core.min.js":1,"sites\/all\/modules\/jquery_update\/replace\/ui\/ui\/minified\/jquery.ui.datepicker.min.js":1,"misc\/form.js":1,"misc\/textarea.js":1,"misc\/tableheader.js":1,"sites\/all\/modules\/webform\/js\/webform.js":1,"sites\/all\/themes\/light_skeleton\/js\/light_skeleton_menu.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"misc\/ui\/jquery.ui.core.css":1,"misc\/ui\/jquery.ui.theme.css":1,"misc\/ui\/jquery.ui.datepicker.css":1,"modules\/comment\/comment.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"sites\/all\/modules\/views\/css\/views.css":1,"sites\/all\/modules\/ctools\/css\/ctools.css":1,"sites\/all\/modules\/webform\/css\/webform.css":1,"sites\/all\/themes\/light_skeleton\/css\/light_skeleton_skeleton.css":1,"sites\/all\/themes\/light_skeleton\/css\/light_skeleton_responsive_nav.css":1,"sites\/all\/themes\/light_skeleton\/css\/light_skeleton_style.css":1,"sites\/all\/themes\/light_skeleton\/system.messages.css":1,"sites\/all\/themes\/light_skeleton\/system.menus.css":1,"sites\/all\/themes\/light_skeleton\/system.theme.css":1}},"urlIsAjaxTrusted":{"\/node\/4":true}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"light_skeleton","theme_token":"jTuuovw8_dGsNtWJ4cI3VpxITznuiO6dh8GX-J3y1ZY","js":{"sites\/all\/modules\/jquery_update\/replace\/jquery\/1.7\/jquery.min.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"sites\/all\/modules\/jquery_update\/replace\/ui\/ui\/minified\/jquery.ui.core.min.js":1,"sites\/all\/modules\/jquery_update\/replace\/ui\/ui\/minified\/jquery.ui.datepicker.min.js":1,"misc\/form.js":1,"sites\/all\/modules\/google_analytics\/googleanalytics.js":1,"0":1,"misc\/textarea.js":1,"misc\/tableheader.js":1,"sites\/all\/modules\/webform\/js\/webform.js":1,"sites\/all\/themes\/light_skeleton\/js\/light_skeleton_menu.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"misc\/ui\/jquery.ui.core.css":1,"misc\/ui\/jquery.ui.theme.css":1,"misc\/ui\/jquery.ui.datepicker.css":1,"modules\/comment\/comment.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"sites\/all\/modules\/views\/css\/views.css":1,"sites\/all\/modules\/ctools\/css\/ctools.css":1,"sites\/all\/libraries\/fontawesome\/css\/font-awesome.css":1,"sites\/all\/modules\/webform\/css\/webform.css":1,"sites\/all\/themes\/light_skeleton\/css\/light_skeleton_skeleton.css":1,"sites\/all\/themes\/light_skeleton\/css\/light_skeleton_responsive_nav.css":1,"sites\/all\/themes\/light_skeleton\/css\/light_skeleton_style.css":1,"sites\/all\/themes\/light_skeleton\/system.messages.css":1,"sites\/all\/themes\/light_skeleton\/system.menus.css":1,"sites\/all\/themes\/light_skeleton\/system.theme.css":1}},"googleanalytics":{"trackOutbound":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|arc|arj|asf|asx|avi|bin|csv|doc(x|m)?|dot(x|m)?|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt(x|m)?|pot(x|m)?|pps(x|m)?|ppam|sld(x|m)?|thmx|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls(x|m|b)?|xlt(x|m)|xlam|xml|z|zip"},"urlIsAjaxTrusted":{"\/node\/4":true}});
 //--><!]]>
 </script>
 </head>
@@ -241,7 +248,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
   <label class="element-invisible" for="edit-submitted-date-year">Year </label>
  <select class="year form-select" id="edit-submitted-date-year" name="submitted[date][year]"><option value="" selected="selected">Year</option><option value="2013">2013</option><option value="2014">2014</option><option value="2015">2015</option><option value="2016">2016</option><option value="2017">2017</option></select>
 </div>
-<input type="image" src="/sites/all/modules/webform/images/calendar.png" class="webform-calendar webform-calendar-start-2013-09-24 webform-calendar-end-2017-09-24 webform-calendar-day-0" alt="Open popup calendar" title="Open popup calendar" />
+<input type="image" src="/sites/all/modules/webform/images/calendar.png" class="webform-calendar webform-calendar-start-2013-09-29 webform-calendar-end-2017-09-29 webform-calendar-day-0" alt="Open popup calendar" title="Open popup calendar" />
 </div>
 </div>
 <div  class="form-item webform-component webform-component-textarea webform-component--textarea">
@@ -349,7 +356,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 <input type="hidden" name="details[page_num]" value="1" />
 <input type="hidden" name="details[page_count]" value="1" />
 <input type="hidden" name="details[finished]" value="0" />
-<input type="hidden" name="form_build_id" value="form-pkuP4rA2s4PltO_PgR83Lak18pvVQzh4HK_fx1z32Fc" />
+<input type="hidden" name="form_build_id" value="form-_QjNoX5GoAJbhTw0q99KlNKDTr4b2iIKv7SIt3IW1EE" />
 <input type="hidden" name="form_id" value="webform_client_form_4" />
 <div class="form-actions"><input class="webform-submit button-primary form-submit" type="submit" name="op" value="Submit" /></div></div></form>    
       </div>
