--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 </style>
 <style type="text/css" media="all">
 @import url("/sites/all/modules/ctools/css/ctools.css?");
+@import url("/sites/all/libraries/fontawesome/css/font-awesome.css?");
 @import url("/sites/all/themes/light_skeleton/css/light_skeleton_skeleton.css?");
 @import url("/sites/all/themes/light_skeleton/css/light_skeleton_responsive_nav.css?");
 @import url("/sites/all/themes/light_skeleton/css/light_skeleton_style.css?");
@@ -68,13 +69,19 @@
     <!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-  <script type="text/javascript" src="/sites/all/modules/jquery_update/replace/jquery/1.10/jquery.min.js?v=1.10.2"></script>
+  <script type="text/javascript" src="/sites/all/modules/jquery_update/replace/jquery/1.7/jquery.min.js?v=1.7.2"></script>
 <script type="text/javascript" src="/misc/jquery.once.js?v=1.2"></script>
 <script type="text/javascript" src="/misc/drupal.js?"></script>
+<script type="text/javascript" src="/sites/all/modules/google_analytics/googleanalytics.js?"></script>
+<script type="text/javascript">
+<!--//--><![CDATA[//><!--
+(function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,"script","//www.google-analytics.com/analytics.js","ga");ga("create", "UA-68209755-1", {"cookieDomain":"auto"});ga("set", "anonymizeIp", true);ga("send", "pageview");
+//--><!]]>
+</script>
 <script type="text/javascript" src="/sites/all/themes/light_skeleton/js/light_skeleton_menu.js?"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"light_skeleton","theme_token":"WmiVtJmSc5lWMNZQ_Px6QoTi75pDoyLcXhgtv-29qMM","js":{"sites\/all\/modules\/jquery_update\/replace\/jquery\/1.10\/jquery.min.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"sites\/all\/themes\/light_skeleton\/js\/light_skeleton_menu.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"modules\/comment\/comment.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"sites\/all\/modules\/views\/css\/views.css":1,"sites\/all\/modules\/ctools\/css\/ctools.css":1,"sites\/all\/themes\/light_skeleton\/css\/light_skeleton_skeleton.css":1,"sites\/all\/themes\/light_skeleton\/css\/light_skeleton_responsive_nav.css":1,"sites\/all\/themes\/light_skeleton\/css\/light_skeleton_style.css":1,"sites\/all\/themes\/light_skeleton\/system.messages.css":1,"sites\/all\/themes\/light_skeleton\/system.menus.css":1,"sites\/all\/themes\/light_skeleton\/system.theme.css":1}}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"light_skeleton","theme_token":"_sej-xzhQ5r3yUlXhfklDVz2_iHk9QbHJ7w8tYzheGc","js":{"sites\/all\/modules\/jquery_update\/replace\/jquery\/1.7\/jquery.min.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"sites\/all\/modules\/google_analytics\/googleanalytics.js":1,"0":1,"sites\/all\/themes\/light_skeleton\/js\/light_skeleton_menu.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"modules\/comment\/comment.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"sites\/all\/modules\/views\/css\/views.css":1,"sites\/all\/modules\/ctools\/css\/ctools.css":1,"sites\/all\/libraries\/fontawesome\/css\/font-awesome.css":1,"sites\/all\/themes\/light_skeleton\/css\/light_skeleton_skeleton.css":1,"sites\/all\/themes\/light_skeleton\/css\/light_skeleton_responsive_nav.css":1,"sites\/all\/themes\/light_skeleton\/css\/light_skeleton_style.css":1,"sites\/all\/themes\/light_skeleton\/system.messages.css":1,"sites\/all\/themes\/light_skeleton\/system.menus.css":1,"sites\/all\/themes\/light_skeleton\/system.theme.css":1}},"googleanalytics":{"trackOutbound":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|arc|arj|asf|asx|avi|bin|csv|doc(x|m)?|dot(x|m)?|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt(x|m)?|pot(x|m)?|pps(x|m)?|ppam|sld(x|m)?|thmx|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls(x|m|b)?|xlt(x|m)|xlam|xml|z|zip"}});
 //--><!]]>
 </script>
 </head>
